--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -454,6 +454,12 @@
     <Filter Include="Uncategorized\Header\GameObject\3D">
       <UniqueIdentifier>{e1d70362-5ed4-4e57-9c25-dcd9e1c21bd9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Uncategorized\Source\GameObject\2D">
+      <UniqueIdentifier>{173d391f-5349-4bf7-9d85-bcb8332580ab}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Uncategorized\Header\GameObject\2D">
+      <UniqueIdentifier>{c5ab2f9a-341d-4bcf-aceb-7b71ded1a950}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -506,9 +512,6 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Math\Vec3.cpp">
       <Filter>NewEngine\Source\Math</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Object\2D\Sprite.cpp">
-      <Filter>NewEngine\Source\Object\2D</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Object\3D\Camera.cpp">
       <Filter>NewEngine\Source\Object\3D</Filter>
@@ -1077,6 +1080,15 @@
     <ClCompile Include="NewEngine\Math\Vec4.cpp">
       <Filter>Uncategorized\Source</Filter>
     </ClCompile>
+    <ClCompile Include="NewEngine\Component\ParticleMeshInfo.cpp">
+      <Filter>Uncategorized\Source\Component\GameObjectInfo</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\2D\Sprite.cpp">
+      <Filter>Uncategorized\Source\GameObject\2D</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\MaterialManager.cpp">
+      <Filter>Uncategorized\Source\Assets</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -1129,9 +1141,6 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Math\Vec3.h">
       <Filter>NewEngine\Header\Math</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Object\2D\Sprite.h">
-      <Filter>NewEngine\Header\Object\2D</Filter>
     </ClInclude>
     <ClInclude Include="NewEngine\Object\3D\Camera.h">
       <Filter>NewEngine\Header\Object\3D</Filter>
@@ -1744,6 +1753,15 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Math\Vec4.h">
       <Filter>Uncategorized\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Component\ParticleMeshInfo.h">
+      <Filter>Uncategorized\Header\Component\GameObjectInfo</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\2D\Sprite.h">
+      <Filter>Uncategorized\Header\GameObject\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\MaterialManager.h">
+      <Filter>Uncategorized\Header\Assets</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
